--- a/SIGNUP/myCoupons.html
+++ b/SIGNUP/myCoupons.html
@@ -40,7 +40,7 @@
                             </select>
                         </div>
                         <div class="cards">
-                            <div class="card">
+                            <a href="javascript:;" class="card">
                                 <p class="card-name">7.9折通用券</p>
                                 <p class="card-title">咪咪 | 全场优惠</p>
                                 <div class="card-info">
@@ -50,8 +50,8 @@
                                     <p>4.本券最终解释权由富隆（香港）企业管理集团所有</p>
                                     <a href="javascript:;" class="open-btn"></a>
                                 </div>
-                            </div>
-                            <div class="card">
+                            </a>
+                            <a href="javascript:;" class="card">
                                 <p class="card-name">7.9折通用券</p>
                                 <p class="card-title">咪咪 | 全场优惠</p>
                                 <div class="card-info">
@@ -61,7 +61,7 @@
                                     <p>4.本券最终解释权由富隆（香港）企业管理集团所有</p>
                                     <a href="javascript:;" class="open-btn"></a>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -74,7 +74,7 @@
                             </select>
                         </div>
                         <div class="cards">
-                            <div class="card">
+                            <a href="javascript:;" class="card">
                                 <p class="card-name">7.9折通用券</p>
                                 <p class="card-title">咪咪 | 全场优惠</p>
                                 <div class="card-info">
@@ -84,8 +84,8 @@
                                     <p>4.本券最终解释权由富隆（香港）企业管理集团所有</p>
                                     <a href="javascript:;" class="open-btn"></a>
                                 </div>
-                            </div>
-                            <div class="card">
+                            </a>
+                            <a href="javascript:;" class="card">
                                 <p class="card-name">7.9折通用券</p>
                                 <p class="card-title">咪咪 | 全场优惠</p>
                                 <div class="card-info">
@@ -95,7 +95,18 @@
                                     <p>4.本券最终解释权由富隆（香港）企业管理集团所有</p>
                                     <a href="javascript:;" class="open-btn"></a>
                                 </div>
-                            </div>
+                            </a>
+                            <a href="javascript:;" class="card">
+                                <p class="card-name">7.9折通用券</p>
+                                <p class="card-title">咪咪 | 全场优惠</p>
+                                <div class="card-info">
+                                    <p>1.本券仅限咪咪店铺使用</p>
+                                    <p>2.本券仅限领券当天一次性使用，过期无效</p>
+                                    <p>3.本券不与其他任何特惠套餐同享</p>
+                                    <p>4.本券最终解释权由富隆（香港）企业管理集团所有</p>
+                                    <a href="javascript:;" class="open-btn"></a>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
