--- a/SIGNUP/myCoupons.html
+++ b/SIGNUP/myCoupons.html
@@ -48,7 +48,7 @@
                                     <p>2.本券仅限领券当天一次性使用，过期无效</p>
                                     <p>3.本券不与其他任何特惠套餐同享</p>
                                     <p>4.本券最终解释权由富隆（香港）企业管理集团所有</p>
-                                    <a href="javascript:;" class="open-btn"></a>
+                                    <span class="open-btn"></span>
                                 </div>
                             </a>
                             <a href="javascript:;" class="card">
@@ -59,7 +59,7 @@
                                     <p>2.本券仅限领券当天一次性使用，过期无效</p>
                                     <p>3.本券不与其他任何特惠套餐同享</p>
                                     <p>4.本券最终解释权由富隆（香港）企业管理集团所有</p>
-                                    <a href="javascript:;" class="open-btn"></a>
+                                    <span class="open-btn"></span>
                                 </div>
                             </a>
                         </div>
@@ -82,7 +82,7 @@
                                     <p>2.本券仅限领券当天一次性使用，过期无效</p>
                                     <p>3.本券不与其他任何特惠套餐同享</p>
                                     <p>4.本券最终解释权由富隆（香港）企业管理集团所有</p>
-                                    <a href="javascript:;" class="open-btn"></a>
+                                    <span class="open-btn"></span>
                                 </div>
                             </a>
                             <a href="javascript:;" class="card">
@@ -93,7 +93,7 @@
                                     <p>2.本券仅限领券当天一次性使用，过期无效</p>
                                     <p>3.本券不与其他任何特惠套餐同享</p>
                                     <p>4.本券最终解释权由富隆（香港）企业管理集团所有</p>
-                                    <a href="javascript:;" class="open-btn"></a>
+                                    <span class="open-btn"></span>
                                 </div>
                             </a>
                             <a href="javascript:;" class="card">
@@ -104,7 +104,7 @@
                                     <p>2.本券仅限领券当天一次性使用，过期无效</p>
                                     <p>3.本券不与其他任何特惠套餐同享</p>
                                     <p>4.本券最终解释权由富隆（香港）企业管理集团所有</p>
-                                    <a href="javascript:;" class="open-btn"></a>
+                                    <span class="open-btn"></span>
                                 </div>
                             </a>
                         </div>
